# djano-Authentication-System-Architecture

./: .env  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
accounts/: forms.py  middleware.py  models.py  urls.py  utils.py  views.py
accounts/api/: filters.py  pagination.py  permissions.py  serializers.py  views.py
accounts/application/: dtos.py  interfaces.py  ports.py  services.py  use_cases.py
accounts/domain/: aggregates.py  events.py  exceptions.py  factories.py  models.py  repositories.py  services.py  specifications.py  use_cases.py  value_objects.py
accounts/infrastructure/: repositories.py
accounts/middleware/: api_security.py  csrf_protection.py  rate_limit.py  request_validation.py  secure_headers.py  security_middleware.py  session_security.py  sql_injection.py  xss_protection.py
accounts/security/: password_validators.py
accounts/services/: account_security.py  activity_log_service.py  audit_log_service.py  audit_logging_service.py  auth_service.py  brute_force_protection.py  device_fingerprint_service.py  device_manager.py  email_service.py  mfa_service.py  notification_service.py  password_security.py  password_service.py  profile_service.py  rate_limit_service.py  recovery_service.py  risk_analyzer.py  security_audit.py  security_monitor.py  security_service.py  session_manager.py  (+5 more)
core/: settings.py
docs/: README.md  api.md  deployment.md  development.md  security.md
monitoring/: prometheus.yml
tests/: conftest.py
(+28 files in other folders)
